RESOLVED FIXED96276
Web Inspector: highlight of paint rectangles is broken
https://bugs.webkit.org/show_bug.cgi?id=96276
Summary Web Inspector: highlight of paint rectangles is broken
Andrey Kosyakov
Reported 2012-09-10 08:33:05 PDT
0. Open WebInspector, switch to Timeline panel 1. Click record 2. Reload the page 3. Click stop 1. Locate a Paint event and hover over it; EXPECTED: Paint rectangle is highlighted in the inspected page. ACTUAL: Nothing happens This was apparently regressed by r127240.
Attachments
Patch (1.50 KB, patch)
2012-09-10 08:56 PDT, Andrey Kosyakov
no flags
Andrey Kosyakov
Comment 1 2012-09-10 08:56:09 PDT
WebKit Review Bot
Comment 2 2012-09-10 12:12:25 PDT
Comment on attachment 163143 [details] Patch Clearing flags on attachment: 163143 Committed r128089: <http://trac.webkit.org/changeset/128089>
WebKit Review Bot
Comment 3 2012-09-10 12:12:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.