Web Inspector: highlight of paint rectangles is broken https://bugs.webkit.org/show_bug.cgi?id=96276

Reviewed by Vsevolod Vlasov.

* inspector/InspectorOverlay.cpp:
(WebCore::InspectorOverlay::drawRectHighlight): Fix JS method name to match the one in InspectorOverlayPage.html


Canonical link: https://commits.webkit.org/114182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128089 268f45cc-cd09-0410-ab3c-d52691b4dbfc